# discord-forwarder

./: Cargo.toml
.github/workflows/: test-and-build.yml
src/: main.rs
