[package]
name = "discord-forwader"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = [
"builder",
"client",
"gateway",
"model",
"utils",
"collector",
"framework",
"rustls_backend",
]
version = "0.12.4"
